[package]
name = "mqtt"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
rumqttc = { version = "0.24.0",features = ["use-rustls"] }
pretty_env_logger = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.41"
serde_json = "1.0.140"
log = "0.4.27"