[package]
name = "mqtt"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
rumqttc = { version = "0.24.0",features = ["use-rustls"] }
pretty_env_logger = "0.5.0"
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
bson = { version = "2", features = ["chrono-0_4"] }
mongodb = "3"
dotenv = "0.15"
axum = { version = "0.8", features = ["ws"] }
tokio-tungstenite = "0.27"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
axum-extra = { version = "0", features = ["typed-header"] }
futures-util = "0"
tokio-stream = { version = "0", features = ["sync"] }
